src/index.css
body {
  margin: 0;
  background-color: #f0f0f0;
  font-family: "Raleway", sans-serif;
}

input[type="text"] {
  border: 0;
  outline: 0;
  border-bottom: 1px solid lightgrey;
  font-family: "Raleway", sans-serif;
}

input[type="text"]:focus {
  border-bottom: 1px solid black;
}

#root {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media screen and (max-width: 450px) {
  body, html {
    height: 100%;
  }

  #root {
   height: 100%;
  }
}

